--- a/Lecture_1_Graph_and_Tree_Basics_20200905.ipynb
+++ b/Lecture_1_Graph_and_Tree_Basics_20200905.ipynb
@@ -263,6 +263,21 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Для работы с графами будем использовать библиотеку [NetworkX](https://networkx.github.io/).\n",
+    "\n",
+    "Для рисования используем [MatPlotLib](https://matplotlib.org/).\n",
+    "\n",
+    "[Здесь](https://habr.com/ru/post/468295/) и [python-graph-gallery.com/](здесь ) можно посмотреть как прекрасны могут быть графики, нарисованные с его помощью.\n",
+    "\n",
+    "Замечу, что у меня (и некоторых уважаемых мною людей) до сих пор не получается рисовать на нем без помощи StackOverflow. Так что сколько бы вы ни учились, вам всегда будет что узнать про MatPlotLib. \n",
+    "\n",
+    "В качестве альтернативы могу предложить более модные [Seaborn](http://seaborn.pydata.org/), [Bokeh](https://docs.bokeh.org/en/latest/index.html) и массу других красивых библиотек."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -355,13 +370,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66184fd6651a4800a31aa193cda927b6",
+       "model_id": "58da5b6b23674b16821c9bda0f49fe52",
        "version_major": 2,
        "version_minor": 0
       },
