--- a/Lecture_2_Data_Structures_20200911.ipynb
+++ b/Lecture_2_Data_Structures_20200911.ipynb
@@ -89,9 +89,9 @@
     "    # Добавляем потомков справо и слева, разделив строку посредине.\n",
     "    c = int((right + left) / 2)\n",
     "    if node[1] != None:\n",
-    "        strings = printTree(node[1], c, left, strings, layer+1)\n",
+    "        strings = printTreeDepth(node[1], c, left, strings, layer+1)\n",
     "    if node[2] != None:\n",
-    "        strings = printTree(node[2], right, c+1, strings, layer+1)\n",
+    "        strings = printTreeDepth(node[2], right, c+1, strings, layer+1)\n",
     "        \n",
     "    # Если это был верхний уровень, значит всё сделали, пора выводить дерево.\n",
     "    if layer == 0:\n",
