--- a/Lecture_3_Sorting_Complexity_20200918.ipynb
+++ b/Lecture_3_Sorting_Complexity_20200918.ipynb
@@ -29,6 +29,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Немного про переменные"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [1,2,3,4,5]\n",
+    "b = []\n",
+    "b = a\n",
+    "b[0] = 10\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [1,2,3,4,5]\n",
+    "b = []\n",
+    "b = a[:]\n",
+    "b[0] = 10\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[10], [2], 3, 4, 5]"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [[1],[2],3,4,5]\n",
+    "b = []\n",
+    "b = a\n",
+    "b[0][0] = 10\n",
+    "a"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -68,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -86,18 +165,18 @@
        "False"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "2 in data"
+    "3 in data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -106,13 +185,13 @@
        "(False, 3)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "BinSearchVirt(data, 2)"
+    "BinSearchVirt(data, 3)"
    ]
   },
   {
@@ -156,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,14 +254,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.45 s ± 37.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "6.43 s ± 154 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -721,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,6 +813,26 @@
     "# Хеш и в какой позиции хранится соответствующий ему текст.\n",
     "hashs = [(hashlib.md5(t.encode()).hexdigest(), i) for i, t in enumerate(texts)]\n",
     "hashs = sorted(hashs, key=lambda x: x[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140272454775944\n",
+      "140272454739760\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(id(a))\n",
+    "a = 'sdfsdvsdfs'\n",
+    "print(id(a))\n"
    ]
   },
   {
