transducers image height fix

--- a/Transducers.ipynb
+++ b/Transducers.ipynb
@@ -60,7 +60,7 @@
     },
     {
       "source": [
-        "<img src=\"img/transducer.jpg\" height=300/>"
+        "<img src=\"img/transducer.jpg\" height=\"300\"/>"
       ],
       "cell_type": "markdown",
       "metadata": {}
