transducers image height fix

--- a/Transducers.ipynb
+++ b/Transducers.ipynb
@@ -60,7 +60,9 @@
     },
     {
       "source": [
-        "<img src=\"img/transducer.jpg\" height=\"300\"/>"
+        "<div>\n",
+        "<img src=\"img/transducer.jpg\" height=\"300\"/>\n",
+        "</div>"
       ],
       "cell_type": "markdown",
       "metadata": {}
