--- a/Transducers.ipynb
+++ b/Transducers.ipynb
@@ -54,13 +54,13 @@
         "\n",
         "\n",
         "\n",
-        "Если от лени свести английский язык к буквам `abfsh`, то вышерассказанныя транслитерация иллюстрируется так. Слева от двоеточия -- символ, по которому мы переходим в трансдьюсере, как в автомате. А что за дополнительная строка справа -- читайте ниже :)\n",
+        "Если от лени свести английский язык к буквам `abfsh`, то вышерассказанныя транслитерация иллюстрируется так. Слева от двоеточия -- символ, по которому мы переходим в трансдьюсере, как в автомате. А что за дополнительная строка справа -- ниже\n",
         "\n"
       ]
     },
     {
       "source": [
-        "<div>\n",
+        "<div style=\"width: 200px;\">\n",
         "<img src=\"img/transducer.jpg\" height=\"300\"/>\n",
         "</div>"
       ],
