--- a/Transducers.ipynb
+++ b/Transducers.ipynb
@@ -60,8 +60,8 @@
     },
     {
       "source": [
-        "<div style=\"width: 200px;\">\n",
-        "<img src=\"img/transducer.jpg\" height=\"300\"/>\n",
+        "<div style=\"width: 20px;\">\n",
+        "<img src=\"img/transducer.jpg\" width=20px/>\n",
         "</div>"
       ],
       "cell_type": "markdown",
