--- a/Transducers.ipynb
+++ b/Transducers.ipynb
@@ -21,7 +21,7 @@
       "source": [
         "# о трансдьюсерах\n",
         "\n",
-        "Подробное чтение есть во 2 издании [Jurafsky and Martin](http://idiom.ucsd.edu/~bakovic/compphon/Jurafsky,%20Martin.-Speech%20and%20Language%20Processing_%20An%20Introduction%20to%20Natural%20Language%20Processing%20(2007).pdf) (глава 3 и раздел 11.2)\n",
+        "Подробное чтение есть во 2 издании [Jurafsky and Martin](http://idiom.ucsd.edu/~bakovic/compphon/Jurafsky,%20Martin.-Speech%20and%20Language%20Processing_%20An%20Introduction%20to%20Natural%20Language%20Processing%20%402007%41.pdf) (глава 3 и раздел 11.2)\n",
         "\n",
         "И много статей на aclweb.org\n",
         "\n",
